--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_CONNECT_URL="mongodb+srv://izza26:izzahafid2605@cluster0.5z4pmz7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGODB_CONNECT_URL="mongodb+srv://izza26:izzahafid2605@cluster0.5z4pmz7.mongodb.net/movieTickets"
 
 PORT=3000
 
